--- a/public/index.html
+++ b/public/index.html
@@ -12,3 +12,5 @@
     </body>
     <script src="/dist/bundle.js"></script>
 </html>
+
+<!-- Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
